[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/main/ui/candy-button/candy-button-pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/main/ui/candy-button/candy-button.png" type="Texture" id=2]
[ext_resource path="res://assets/main/ui/candy-button/candy-button-focused.png" type="Texture" id=3]
[ext_resource path="res://assets/main/ui/font/fredoka-one-regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/main/ui/candy-button/candy-button.gd" type="Script" id=5]
[ext_resource path="res://src/main/ui/candy-button/gradient-none.tres" type="Gradient" id=6]
[ext_resource path="res://assets/main/ui/candy-button/candy-button-shine-normal.png" type="Texture" id=7]
[ext_resource path="res://src/main/utils/icon-outline.shader" type="Shader" id=8]

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;
render_mode unshaded;

uniform sampler2D gradient: hint_black;
uniform float mix_amount = 1.0;

void fragment() {
	vec4 input_color = texture(TEXTURE, UV);
	float greyscale_value = dot(input_color.rgb, vec3(0.299, 0.587, 0.114));
	vec3 sampled_color = texture(gradient, vec2(greyscale_value, 0.0)).rgb;

	COLOR.rgb = mix(input_color.rgb, sampled_color, mix_amount);
	COLOR.a = input_color.a;
}"

[sub_resource type="GradientTexture" id=9]
gradient = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 8 )
shader_param/mix_amount = 1.0
shader_param/gradient = SubResource( 9 )

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/width = 15.0
shader_param/white = Color( 1, 1, 1, 1 )
shader_param/black = Color( 0.149412, 0.135882, 0.15, 1 )
shader_param/sample_count = 24

[sub_resource type="DynamicFont" id=11]
resource_local_to_scene = true
size = 24
outline_size = 2
outline_color = Color( 0.149412, 0.135882, 0.15, 1 )
font_data = ExtResource( 4 )

[node name="CandyButton" type="TextureButton"]
material = SubResource( 10 )
margin_left = 235.173
margin_top = 84.7441
margin_right = 435.173
margin_bottom = 134.744
rect_min_size = Vector2( 200, 50 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 3 )
expand = true
script = ExtResource( 5 )
text = "Text"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0
custom_constants/separation = 0

[node name="Spacer1" type="Control" parent="HBoxContainer"]
margin_right = 33.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="IconLeft" type="TextureRect" parent="HBoxContainer"]
visible = false
material = SubResource( 7 )
margin_left = 15.0
margin_top = 7.0
margin_right = 50.0
margin_bottom = 42.0
rect_min_size = Vector2( 35, 35 )
size_flags_vertical = 4
expand = true

[node name="Spacer2" type="Control" parent="HBoxContainer"]
margin_left = 33.0
margin_right = 66.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 66.0
margin_top = 10.0
margin_right = 123.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 11 )
text = "Text"
align = 1
valign = 1

[node name="Spacer3" type="Control" parent="HBoxContainer"]
margin_left = 123.0
margin_right = 156.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="IconRight" type="TextureRect" parent="HBoxContainer"]
visible = false
material = SubResource( 7 )
margin_left = 139.0
margin_top = 7.0
margin_right = 174.0
margin_bottom = 42.0
rect_min_size = Vector2( 35, 35 )
size_flags_vertical = 4
expand = true

[node name="Spacer4" type="Control" parent="HBoxContainer"]
margin_left = 156.0
margin_right = 190.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="Shine" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.831373 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
